# Qwertickle

./: README.md  autogen.sh  configure.ac
data/: Makefile.am
src/: qwertickle.c
