desktopdir = $(datadir)/applications
desktop_DATA = $(PACKAGE).desktop

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = $(PACKAGE).png

imagesdir = $(datadir)/$(PACKAGE)
images_DATA = $(PACKAGE).png

soundsdir = $(datadir)/$(PACKAGE)
sounds_DATA = key-down.mp3 \
              key-up.mp3 \
              big-key-down.mp3 \
              big-key-up.mp3

EXTRA_DIST = $(PACKAGE).desktop.in \
	     $(pixmaps_DATA) \
	     $(images_DATA) \
	     $(sounds_DATA)
